feat: added pagination

--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/list.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/list.html
@@ -17,4 +17,5 @@
     {% empty %}
         <p>No posts available.</p>
     {% endfor %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
