--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/list.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/list.html
@@ -17,5 +17,5 @@
     {% empty %}
         <p>No posts available.</p>
     {% endfor %}
-    {% include "pagination.html" with page=posts %}
+    {% include "pagination.html" with page=page_obj %}
 {% endblock %}
