--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/detail.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/detail.html
@@ -8,4 +8,7 @@
         Published on {{ post.published_at }} by {{post.author}}
     </p>
    {{ post.body|linebreaks }}</p>
+   <p>
+       <a href="{% url 'blog:post_share' post.pk %}">Share via email</a>
+   </p>
 {% endblock %}
