--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/detail.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/detail.html
@@ -11,6 +11,16 @@
    <p>
        <a href="{% url 'blog:post_share' post.pk %}">Share via email</a>
    </p>
+   <h2>Similar posts</h2>
+   {% for post in similar_posts %}
+      <p>
+        <a href="{{ post.get_absolute_url }}">
+          {{ post.title }}
+        </a>
+      </p>
+   {% empty %}
+      <p>No similar posts found.</p>
+   {% endfor %}
    {% with comments.count as total_comments %}
         <h2>
             {{ total_comments }} Comment{{ total_comments|pluralize }}
