--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/base.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/base.html
@@ -15,6 +15,8 @@
   <aside id="sidebar">
     <h2>My blog</h2>
     <p>Hello dude! I published {% total_posts %} posts so far.</p>
+    <h3>Latest posts</h3>
+    {% show_latest_posts 3 %}
   </aside>
 </body>
 </html>
