--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/detail.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/detail.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 
 {% block title %}{{ post.title }}{% endblock %}
 
@@ -7,7 +8,7 @@
     <p class="date">
         Published on {{ post.published_at }} by {{post.author}}
     </p>
-   {{ post.body|linebreaks }}</p>
+   {{ post.body|markdown }}
    <p>
        <a href="{% url 'blog:post_share' post.pk %}">Share via email</a>
    </p>
