--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/list.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 
 {% block title %}Blog Posts{% endblock %}
 
@@ -22,7 +23,7 @@
       <p class="date">
         Published on {{ post.published_at }} by {{post.author}}
       </p>
-    {{ post.body|truncatewords:30|linebreaks }}</p>
+    {{ post.body|markdown|truncatewords_html:30 }}</p>
     {% empty %}
         <p>No posts available.</p>
     {% endfor %}
