fix: fixed templates issues

--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/share.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/blog/post/share.html
@@ -7,7 +7,7 @@
 {% if sent %}
     <h1>Message has been sent.</h1>
     <p>
-        Sending post {{ post.title }} to {{ recipient_email }} was successful.
+        Sending post {{ post.title }} was successful.
     </p>
 {% else %}
     <h1>Share Post: {{ post.title }} via email</h1>
