--- a/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/pagination.html
+++ b/Projects/Testtrack/M1 - Django Learning/mysite/blog/templates/pagination.html
@@ -7,7 +7,7 @@
       Page {{ page.number }} of {{ page.paginator.num_pages }}.
     </span>
     {% if page.has_next %}
-      <a href=?page={{ page.next_page_number }} class="next">Next</a>
+      <a href="?page={{ page.next_page_number }}" class="next">Next</a>
     {% endif %}
   </span>
 </div>
